<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_page_title"
             />

        <Button
            android:id="@+id/main_page_start_ble_button"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_page_start_ble">

        </Button>
        <Button
            android:id="@+id/main_page_start_bluetooth_button"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_page_start_bluetooth">
        </Button>

        <Button
            android:id="@+id/main_page_start_wifi_button"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_page_start_wifi">
        </Button>

        <Button
            android:id="@+id/main_page_stop_button"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/main_page_stop">

        </Button>
        <EditText
            android:id="@+id/main_page_messages_info"
            android:gravity="top"
            android:background="@color/cardview_dark_background"
            android:enabled="false"
            android:text="@string/test_string"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </EditText>
    </LinearLayout>

</RelativeLayout>